--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue-cli-plugin-element-plus": "~0.0.13"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
