--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^1.0.2-beta.28",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -37,6 +38,11 @@
     "sass-loader": "^12.0.0",
     "vue-cli-plugin-element-plus": "~0.0.13"
   },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
+  },
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
@@ -45,10 +51,5 @@
       "eslint --fix",
       "git add"
     ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-customizable"
-    }
   }
 }
